--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@types/node": "^12.20.34",
     "@types/react": "^17.0.31",
     "@types/react-dom": "^17.0.10",
+    "antd": "^4.16.13",
     "graphql": "^15.6.1",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
@@ -47,6 +50,7 @@
     "@graphql-codegen/cli": "2.2.1",
     "@graphql-codegen/typescript": "2.2.4",
     "@graphql-codegen/typescript-operations": "^2.1.8",
-    "@graphql-codegen/typescript-react-apollo": "3.1.6"
+    "@graphql-codegen/typescript-react-apollo": "3.1.6",
+    "@types/react-router-dom": "^5.3.1"
   }
 }
