--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "dayjs": "^1.10.7",
     "graphql": "^15.6.1",
     "i18next": "^21.3.3",
+    "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-dayjs": "^0.3.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.13.0",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.4",
