--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.10.7",
     "graphql": "^15.6.1",
     "i18next": "^21.3.3",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
@@ -60,6 +61,7 @@
     "@graphql-codegen/typescript": "2.2.4",
     "@graphql-codegen/typescript-operations": "^2.1.8",
     "@graphql-codegen/typescript-react-apollo": "3.1.6",
+    "@types/lodash": "^4.14.177",
     "@types/react-router-dom": "^5.3.1"
   }
 }
