--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "request-image-size": "^2.2.0",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
