Add small things

--- a/codegen.yml
+++ b/codegen.yml
@@ -1,6 +1,6 @@
 overwrite: true
 schema: "http://localhost:3000/graphql"
-documents: "./src/components/**/*.{ts,tsx}"
+documents: "./src/pages/**/*.{ts,tsx}"
 generates:
   src/generated/graphql.tsx:
     plugins:
