--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "4.0.3",
     "request-image-size": "^2.2.0",
     "typescript": "^4.4.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -63,6 +64,7 @@
     "@graphql-codegen/typescript-operations": "^2.1.8",
     "@graphql-codegen/typescript-react-apollo": "3.1.6",
     "@types/lodash": "^4.14.177",
-    "@types/react-router-dom": "^5.3.1"
+    "@types/react-router-dom": "^5.3.1",
+    "@types/uuid": "^8.3.4"
   }
 }
